# aider_test_project

./: .aider.chat.history.md  .aider.input.history  .gitignore  main.py  pyproject.toml
